# screws

./: .gitignore  CMakeLists.txt  CNAME  README.md  Screws.pro  TestScrews.pro  index.html  params.json
doc/: doxygen.config
doc/html/: adjoint_8h_source.html  adjoint_8hpp_source.html  annotated.html  class_adjoint-members.html  class_adjoint.html  class_homogeneous_transform-members.html  class_homogeneous_transform.html  class_skew-members.html  class_skew.html  class_translation.html  class_twist-members.html  class_twist.html  classes.html  classscrews_1_1_homogeneous_transform-members.html  classscrews_1_1_homogeneous_transform.html  classscrews_1_1_rotation-members.html  classscrews_1_1_rotation.html  classscrews_1_1_screw_exception-members.html  classscrews_1_1_screw_exception.html  classscrews_1_1_skew-members.html  classscrews_1_1_translation-members.html  classscrews_1_1_twist-members.html  classscrews_1_1_vector6-members.html  dir_40f4fc6525582f8acd96c959cb5cf997.html  dir_6a34ff5f4545395fc5749738aa16c5aa.html  dir_937900b87e0c7a5fa01190c395fb83f7.html  files.html  functions.html  functions_func.html  homogeneous_transform_8h_source.html  homogeneous_transform_8hpp_source.html  index.html  rotation_8hpp_source.html  screw_exception_8hpp_source.html  screws_8hpp_source.html  screws_init_library_8h_source.html  screws_init_library_8hpp_source.html  (+11 more)
src/: adjoint.cpp  adjoint.hpp  homogeneousTransform.hpp  rotation.hpp  screwException.cpp  screwException.hpp  screws.hpp  screwsInitLibrary.hpp  skew.hpp  testScrews.cpp  translation.hpp  twist.hpp  vector6.hpp
(+53 files in other folders)
